--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,19 +24,23 @@
     "time": "Время мероприятия",
     "about": "Описание мероприятия",
     "online": "Онлайн мероприятия",
+    "find":"Найти",
     "createEvent": "Создать мероприятия"
   },
   "dialog": {
     "selectChat": "Выбрать чат"
   },
   "login": {
+    "login": "Логин",
     "error": "Все поля обязательны для заполнения",
     "button": "Войти",
     "createAcc": "Создать аккаунт",
     "email": "Эл.почта",
-    "password": "Пароль"
+    "password": "Пароль",
+    "text":"У вас нет аккаунта?"
   },
   "signUp": {
+    "signUp": "Регистрация",
     "firstName": "Имя",
     "secondName": "Фамилия",
     "email": "Эл.почта",
@@ -108,6 +112,6 @@
     "logout": "Выйти",
     "follow": "Подписаться",
     "unFollow": "Отписаться",
-    "you": "Ты"
+    "you": "Вы"
   }
 }
